# ICS_Bayesian_Risk_Framework

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_TODO.md  CONTRIBUTING.md  Dockerfile  ENGINEERING_AUDIT_REPORT.md  PLAN.md  README.md  TODO.md  _audit_verify.py  alembic.ini  assets.py  attack_paths.py  config.py  cpt_generator.py  docker-compose.yml  graph_builder.py  inference.py  main.py  outputs.py  probability.py  pyproject.toml  requirements-dev.txt  requirements.txt  risk.py  settings.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3f1fade8e943_initial_schema.py
backend/: __init__.py  __main__.py  api.py  api_adapter.py  assets.py  attack_paths.py  cli.py  config.py  cpt_generator.py  graph_builder.py  inference.py  logging_config.py  outputs.py  pdf_reports.py  probability.py  risk.py  schemas.py  settings.py
backend/app/: __init__.py  framework_adapter.py  main.py  schemas.py
backend/database/: __init__.py  config.py  models.py  repositories.py  services.py
data/: building_automation.json  power_substation.json  swat_example.json  water_treatment.json
docs/: rapport-technique-ics-bayesian.md  rapport-technique-ics-bayesian.tex
frontend/: .nginx.conf  Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  TODO.md  constants.ts  types.ts  utils.ts
frontend/src/components/: BayesianResults.tsx  ConfirmDialog.tsx  CptSection.tsx  EvidencePanel.tsx  (+10 more)
output/: cpts.json  graph.json  metrics.json  posteriors.json  risk_table.csv  summary.txt
tests/: conftest.py  test_cpt_generator.py  test_framework_api.py  test_graph_builder.py  test_inference.py  test_outputs.py  test_persistence.py  test_probability.py  test_report_exports.py  test_risk.py  test_settings.py
